# digital-signage

./: .gitignore  README.md  optimize-videos.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: tauri.yml
scripts/: clean.sh  faststart-videos.sh  generate-preload-manifest.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri-server.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  server.rs
src/lib/: D3ChartStep2.svelte  D3ChartStep3.svelte  index.ts  preload-manifest.ts
src/routes/: +page.svelte
src/routes/splash/: +page.svelte
