[package]
name = "app"
version = "0.2.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
axum = "0.7"
# tower-http 0.5 split compression features per algorithm.
# Replace deprecated/nonexistent "compression" with a concrete algorithm feature.
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"  # サイズ最適化
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"
